force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/Pre_Approval_Opportunity_Out__e.object-meta.xml
<CustomObject>
    <description>This event will be fired when a Pre-Approval Opportunity is created or updated</description>
    <label>Pre-Approval Opportunity - Out</label>
    <pluralLabel>Pre-Approval Opportunities - In</pluralLabel>
</CustomObject>