force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Agent_Branch_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_Branch_ID__c</fullName>
    <label>Agent Branch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>