force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <label>Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>