force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Applicants__c.field-meta.xml
<CustomField>
    <fullName>Applicants__c</fullName>
    <label>Applicants</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>