force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Applicants_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicants_Name__c</fullName>
    <label>Applicants - Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>