force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Bond_ID__c.field-meta.xml
<CustomField>
    <fullName>Bond_ID__c</fullName>
    <label>Bond ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>