force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Consultant_ID__c.field-meta.xml
<CustomField>
    <fullName>Consultant_ID__c</fullName>
    <label>Consultant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>