force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Consultant_Region_Id__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Region_Id__c</fullName>
    <label>Consultant Region Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>