force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Consultant_SubBranch_Id__c.field-meta.xml
<CustomField>
    <fullName>Consultant_SubBranch_Id__c</fullName>
    <label>Consultant SubBranch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>