force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Converted_To_PreApproval__c.field-meta.xml
<CustomField>
    <fullName>Converted_To_PreApproval__c</fullName>
    <label>Converted To PreApproval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>