force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/General_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>General_Lead_ID__c</fullName>
    <label>General Lead ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>