force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>Opportunity Record ID</description>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>