force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Initiation_Type__c.field-meta.xml
<CustomField>
    <fullName>Initiation_Type__c</fullName>
    <label>Initiation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>