force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Loan_Details__c.field-meta.xml
<CustomField>
    <fullName>Loan_Details__c</fullName>
    <label>Loan Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>