force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Loan_Reason_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Reason_Type_Id__c</fullName>
    <label>Loan Reason Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>