force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>The consultant in charge of the opportunity.</description>
    <label>Opportunity Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>