force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Partner_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Application_Id__c</fullName>
    <label>Partner Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>