force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/PreApproval_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>PreApproval_Lead_Id__c</fullName>
    <label>PreApproval Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>