force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Property_Details__c.field-meta.xml
<CustomField>
    <fullName>Property_Details__c</fullName>
    <label>Property Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>