force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Sales_Admin_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin_Id__c</fullName>
    <label>Sales Admin Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>