force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/Seller_Id__c.field-meta.xml
<CustomField>
    <fullName>Seller_Id__c</fullName>
    <label>Seller Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>