force-app/main/default/objects/Pre_Approval_Opportunity_Out__e/fields/smartLink_Url__c.field-meta.xml
<CustomField>
    <fullName>smartLink_Url__c</fullName>
    <label>smartLink Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>